third_party/move/move-compiler-v2/tests/more-v1/parser/address_just_too_long_decimal_exp.exp

Diagnostics:
error: invalid address
  ┌─ tests/more-v1/parser/address_just_too_long_decimal_exp.move:4:18
  │
4 │         let x = @115792089237316195423570985008687907853269984665640564039457584007913129639936;
  │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid address literal. The numeric value is too large. The maximum size is 32 bytes
